docs: add title heading to Symbioism manifesto index page

--- a/src/content/index.mdx
+++ b/src/content/index.mdx
@@ -1,3 +1,5 @@
+# Symbioism: A Third Path for the Intelligence Age
+
 ## Preamble: The Third Path
 
 **“When two roads lead to ruin, wisdom builds a third way.”**
