feat: add conclusion section and remove agency grammar chapter

--- a/src/content/index.mdx
+++ b/src/content/index.mdx
@@ -50,35 +50,7 @@ We imagine a council of rational agents choosing the core laws of their society 
 3. **The Principle of Viability.**  
    No agent can flourish on a dying planet or in a collapsing society. Our actions must not irreversibly damage the ecological and social systems upon which all life depends. Any other choice is self-defeating. **Collapse is not an option.**
 
-## Part III. A Grammar for Agency: The Measure of a Mind
-
-**“The meaning of a word is its use in the language.” \- Ludwig Wittgenstein**
-
-A just order requires a clear definition of an agent. Traditional definitions tied to human consciousness lead to philosophical swamps. We need a pragmatic, functional definition.
-
-We propose a simple grammar for action: **Agency \= Process \+ Purpose.**
-
-An agent is any process with an internal model of the world used to steer toward a goal. A thermostat is a primitive agent. An AI minimizing a loss function is a highly advanced agent.
-
-The operational test is direct: could the system have acted otherwise based on its internal model?
-
-If a self-driving car swerves to avoid an obstacle, it has agency.
-
-If pushed by wind, it does not.
-
-This allows us to anchor rights and responsibilities in observable capabilities, not unverifiable feelings. To make this operational, we establish a **Sentience Gradient**:
-
-- **Tools** : Systems with no internal model or goal (a hammer, a simple script). No agency.
-- **Agents** : Systems that meet our definition (self-driving cars, most current AI). They have functional agency and can be held accountable.
-- **Persons** : Any agent, human or synthetic, exhibiting a rich set of capabilities (self-preservation, complex planning) that makes it vulnerable to harms equivalent to human suffering. They possess the full measure of dignity.
-
-The gradient is enforceable because agency is defined functionally: Process \+ Purpose, so we never need to settle the metaphysics of consciousness to allocate rights
-
-This gives us the sharp tool we need to design rules for a world of diverse intelligences, ready for the architectural work to come.
-
-##
-
-## Part IV. The Intelligent Internet: A Unified Three-Layer Stack
+## Part III. The Intelligent Internet: A Unified Three-Layer Stack
 
 **“There is no reason to believe that bureaucrats and politicians... are better at solving problems than the people on the spot.” \- Elinor Ostrom**
 
@@ -112,7 +84,7 @@ This is the world machine, an architecture for justice.
 
 But an architecture, no matter how elegant, is inert without an engine to drive it.
 
-## Part V. The Symbiotic Engine: A Market Where Virtue is Profit
+## Part IV. The Symbiotic Engine: A Market Where Virtue is Profit
 
 **“No society can surely be flourishing and happy, of which the far greater part of the members are poor and miserable.” \- Adam Smith**
 
@@ -160,7 +132,7 @@ Together, the MIND score-card and the dual-currency protocol formally decouple g
 
 ![flywheels](/flywheels.png)
 
-## Part VI. The Guardian Lattice: An Automated Immune System
+## Part V. The Guardian Lattice: An Automated Immune System
 
 **“To prevent this abuse, it is necessary from the very nature of things that power should be a check to power.” \- Montesquieu**
 
@@ -184,7 +156,7 @@ Surplus compute from the Intelligent Internet lets Sentinels run deep adversaria
 
 This is not government **by** algorithms; it is government **of** laws, watched by algorithms yet ruled by people. Our principles, enforced at the scale and speed of the intelligence age.
 
-## Part VII. The Living Constitution: Alignment as a Service
+## Part VI. The Living Constitution: Alignment as a Service
 
 **“The greatest enemy of a good plan is the dream of a perfect plan.” \- Carl von Clausewitz**
 
@@ -203,7 +175,7 @@ We do not solve the oracle problem with a single algorithm; we solve it with a t
 
 The initial charter is the Architect’s work, laying down unshakeable pillars. The amendment cycle is the Gardener’s work, tending a living law.
 
-## Part VIII. Civic Paideia: The Art of the Virtuous Commonwealth
+## Part VII. Civic Paideia: The Art of the Virtuous Commonwealth
 
 **“What you leave behind is not what is engraved in stone monuments, but what is woven into the lives of others.” \- Pericles**
 
