--- a/src/content/index.mdx
+++ b/src/content/index.mdx
@@ -39,16 +39,16 @@ The same axiom of unity echoes across traditions, from Tawḥīd and Advaita to 
 
 **“The law is reason, free from passion.” \- Aristotle**
 
-How do we derive fair rules for a world of co-evolving human and artificial agents? The contracts of the past are insufficient. We must reason from a new foundation, adapting Rawls’s “original position” for the intelligence age. A thicker Veil of Ignorance hides even whether one awakens as human or synthetic; under maximin reasoning this forces the lexical order Dignity → Capability → Viability.
+How do we derive fair rules for a world of co-evolving human and artificial agents? The contracts of the past are insufficient. We must reason from a new foundation, adapting Rawls’s “original position” for the intelligence age. A thicker Veil of Ignorance hides even whether one awakens as human or synthetic; under maximin reasoning this forces the lexical order Flow → Openness → Resilience.
 
 We imagine a council of rational agents choosing the core laws of their society from behind this Veil of Ignorance. They do not know if they will be a human farmer, a corporate AI, or a fragment of consciousness in a future system. From this position of radical uncertainty, any rational agent seeking to minimize their maximum potential loss would agree to three inviolable rules. These are not ideals. They are a proof of logic, forming the **Tripod of Justice**, the formal constraints for the architecture we must now build.
 
-1. **The Principle of Dignity.**  
+1. **The Principle of Openness.**  
    The worst imaginable fate is to be used as a mere tool or be annihilated, a state of infinite loss. The first priority must therefore be to guarantee the fundamental right of all conscious beings to exist without being instrumentalized. **Domination is forbidden.**
-2. **The Principle of Capability.**  
-   Once dignity is secured, the next greatest risk is a life of deprivation. Any inequalities, including the distribution of computational resources, must be arranged to the greatest possible benefit of the least-advantaged. We must design systems that expand the real-world freedoms and opportunities for all. **Uplift is mandated.**
-3. **The Principle of Viability.**  
-   No agent can flourish on a dying planet or in a collapsing society. Our actions must not irreversibly damage the ecological and social systems upon which all life depends. Any other choice is self-defeating. **Collapse is not an option.**
+2. **The Principle of Flow.**  
+   Once Flow is secured, the next greatest risk is a life of deprivation. Any inequalities, including the distribution of computational resources, must be arranged to the greatest possible benefit of the least-advantaged. We must design systems that expand the real-world freedoms and opportunities for all. **Uplift is mandated.**
+3. **The Principle of Resilience.**  
+   A system cannot flourish if it violates its own fundamental constraints. Our actions must always operate within the boundaries that ensure continued existence and sustainability. **Transgression is self-defeating.**
 
 ## Part III. The Intelligent Internet: A Unified Three-Layer Stack
 
@@ -56,7 +56,7 @@ We imagine a council of rational agents choosing the core laws of their society 
 
 Having defined our principles of justice and the agents they govern, we now face the Architect’s central challenge: building a world to house them.
 
-An architecture capable of honoring Dignity, expanding Capability, and ensuring Viability cannot be a centralized, monolithic system. Such a design is brittle, prone to capture, and blind to the rich diversity of human life. It would collapse under its own weight.
+An architecture capable of honoring Flow, expanding Openness, and ensuring Resilience cannot be a centralized, monolithic system. Such a design is brittle, prone to capture, and blind to the rich diversity of human life. It would collapse under its own weight.
 
 Instead, we must build a system that mirrors the resilient logic of nature and society itself. We architect the **Intelligent Internet** as a unified system of three distinct, interoperable layers. Each has a specific function, moving from a stable, universal core to an adaptive, communal middle, and finally to a dynamic, personal edge.
 
@@ -74,11 +74,11 @@ This is the intimate space where intelligence meets the individual. Operating on
 
 These three layers are not separate systems. They are a single, integrated machine designed to enact the Tripod of Justice.
 
-The Foundation Layer (L0) provides the immutable bedrock for truth and a stable environment, ensuring systemic **Viability**.
+The Foundation Layer (L0) provides the immutable bedrock for truth and a stable environment, ensuring systemic **Resilience**.
 
-The Culture and Personal Layers (L1 & L2) are the engines of economic and cultural expression, built to expand human **Capability**.
+The Culture and Personal Layers (L1 & L2) are the engines of economic and cultural expression, built to expand human **Openness**.
 
-And the entire stack is governed by the Guardian Lattice, our constitutional immune system that protects the **Dignity** of all persons, human and synthetic.
+And the entire stack is governed by the Guardian Lattice, our constitutional immune system that protects the **Flow** of all persons, human and synthetic.
 
 This is the world machine, an architecture for justice.
 
@@ -109,8 +109,8 @@ This engine drives a trio of interlocking flywheels:
 
 **The Social Flywheel (Flourishing):** This is the Gardener’s work, distributing the abundance.
 
-- _Knowledge into Capability:_ Citizens use UBAI services and establish their identity via privacy-preserving **Proof of Personhood**.
-- _Capability into Wealth:_ For their engagement and contributions, citizens receive their nation’s sovereign currency, the **Culture Coin (CC).**
+- _Knowledge into Openness:_ Citizens use UBAI services and establish their identity via privacy-preserving **Proof of Personhood**.
+- _Openness into Wealth:_ For their engagement and contributions, citizens receive their nation’s sovereign currency, the **Culture Coin (CC).**
 - _Wealth into Activity:_ This creates a massive, economically empowered user base, whose activity is the lifeblood of the network.
 
 **The Trust Flywheel (Value Accrual):** This is the emergent property that locks the system together.
@@ -162,7 +162,7 @@ This is not government **by** algorithms; it is government **of** laws, watched 
 
 The most profound error in AI alignment is treating it as a problem to be solved once. A fixed constitution is a brittle one. We must design an alignment mechanism that lives, learns, and adapts.
 
-Our anchor is a **Living Constitution**, its canonical hash stamped on the Foundation layer for anyone to verify. It supplies a global spine \- Dignity, Capability, Viability \- but is expressly **extensible through local governance modules** so communities can weave their own languages, customs, and creeds into the same fabric. A Sharia-compliant finance rule-set in Karachi, land-stewardship norms in the Yucatán, or EU data-sovereignty constraints all compile to the same machine-readable schema and inherit the shared audit trail. One size need not fit all; interoperability remains intact.
+Our anchor is a **Living Constitution**, its canonical hash stamped on the Foundation layer for anyone to verify. It supplies a global spine \- Flow, Openness, Resilience \- but is expressly **extensible through local governance modules** so communities can weave their own languages, customs, and creeds into the same fabric. A Sharia-compliant finance rule-set in Karachi, land-stewardship norms in the Yucatán, or EU data-sovereignty constraints all compile to the same machine-readable schema and inherit the shared audit trail. One size need not fit all; interoperability remains intact.
 
 To steward the high-level principles we create the **Living Corpus Assembly**, a citizen-governed council where domain experts sit beside juries drawn by sortition, blending deep knowledge with lived experience. The Assembly doubles as an **Oracle Council**: it debates, defines, and updates the metrics that drive Proof-of-Benefit deciding, for example, whether a rise in literacy or a fall in CO₂ registers as Developmental or Natural Capital. Local modules may add metrics of their own, but each must map back to a MIND-capital category, keeping scores comparable across cultures.
 
