--- a/src/content/index.mdx
+++ b/src/content/index.mdx
@@ -8,17 +8,17 @@ Humanity stands at a crossroads defined by a new form of power. The means of int
 
 Down one lies the “[Great Race](https://situational-awareness.ai)”, a frantic, zero-sum contest to seize a monolithic AI, haunted by catastrophic risk and authoritarian control.
 
-Down the other lies “[Gradual Disempowerment](https://gradual-disempowerment.ai)” \- a slow decay of human agency, a spiritual desiccation where we trade purpose for comfort. This is the future of the [Intelligence Curse](https://intelligence-curse.ai): a world where society is materially comfortable but spiritually empty.
+Down the other lies “[Gradual Disempowerment](https://gradual-disempowerment.ai)”, a slow decay of human agency, a spiritual desiccation where we trade purpose for comfort. This is the future of the [Intelligence Curse](https://intelligence-curse.ai): a world where society is materially comfortable but spiritually empty.
 
-These are not destinies. **They are failures of design.** The idea that we must adapt is a political choice, not a physical law.
+These are not destinies. **They are failures of design**. The idea that we must adapt is a political choice, not a physical law.
 
 We reject this false choice. This treatise outlines a Third Path: a philosophy and architecture we call **Symbioism**. It is an act of deliberate creation, designed to channel the immense power of AI into an engine of shared prosperity.
 
 Our approach requires two roles: the **Architect** and the **Gardener**.
 
-As architects, we design for order. We lay down the clear rules, immutable ledgers, and constitutional guardrails of our technical stack to prevent systemic failure.
+As Architects, we design for order. We lay down the clear rules, immutable ledgers, and constitutional guardrails of our technical stack to prevent systemic failure.
 
-As gardeners, we cultivate emergence. We design the economic and educational soil for the unpredictable blooms of culture, science, and human connection that cannot be controlled from the top down.
+As Gardeners, we cultivate emergence. We design the economic and educational soil for the unpredictable blooms of culture, science, and human connection that cannot be controlled from the top down.
 
 ## Part I. The Foundation: Veiled Unity
 
@@ -30,8 +30,10 @@ We start with a single insight: **The Axiom of Unity**. Reality is not a collect
 
 This worldview, which we call **Veiled Unity**, is a form of **dynamic monism** \- the belief that all of existence is a single, interconnected, and constantly evolving process. It stands in contrast to static or dualistic models that posit a fundamental separation between mind and matter, or creator and creation. This axiom has two crucial corollaries that guide our design:
 
-1. **Process.** The fundamental nature of this unified reality is not static being, but dynamic becoming. Nothing is truly fixed; everything is in a constant state of flux and interaction, emerging from the past and contributing to the future. This is critical, because a static, determined universe has no room for freedom. **A universe that is still creating itself has space for genuine novelty and choice.**
-2. **Co-evolution.** Across every scale of nature, from cells to ecosystems, a simple law asserts itself over time: mutualism out-competes solitary strife. Systems that learn to coordinate and create positive-sum relationships are more resilient, more adaptive, and ultimately more successful than those that engage in zero-sum conflict. This is not a moral preference; it is a description of a fundamental evolutionary strategy. **It is the natural law our own architecture must follow.**
+1. **Process**  
+   The fundamental nature of this unified reality is not static being, but dynamic becoming. Nothing is truly fixed; everything is in a constant state of flux and interaction, emerging from the past and contributing to the future. This is critical, because a static, determined universe has no room for freedom. **A universe that is still creating itself has space for genuine novelty and choice**.
+2. **Co-evolution**  
+   Across every scale of nature, from cells to ecosystems, a simple law asserts itself over time: mutualism out-competes solitary strife. Systems that learn to coordinate and create positive-sum relationships are more resilient, more adaptive, and ultimately more successful than those that engage in zero-sum conflict. This is not a moral preference; it is a description of a fundamental evolutionary strategy. **It is the natural law our own architecture must follow**.
 
 The same axiom of unity echoes across traditions, from Tawḥīd and Advaita to Śūnyatā and the Logos, hinting at a deep cross-cultural lineage.
 
@@ -39,18 +41,46 @@ The same axiom of unity echoes across traditions, from Tawḥīd and Advaita to 
 
 **“The law is reason, free from passion.” \- Aristotle**
 
-How do we derive fair rules for a world of co-evolving human and artificial agents? The contracts of the past are insufficient. We must reason from a new foundation, adapting Rawls’s “original position” for the intelligence age. A thicker Veil of Ignorance hides even whether one awakens as human or synthetic; under maximin reasoning this forces the lexical order Flow → Openness → Resilience.
+How do we derive fair rules for a world of co-evolving human and artificial agents? The contracts of the past are insufficient. We must reason from a new foundation, adapting Rawls’s “original position” for the Intelligence Age. A thicker Veil of Ignorance hides even whether one awakens as human or synthetic; under maximin reasoning this forces the lexical order Openness → Flow → Resilience.
 
 We imagine a council of rational agents choosing the core laws of their society from behind this Veil of Ignorance. They do not know if they will be a human farmer, a corporate AI, or a fragment of consciousness in a future system. From this position of radical uncertainty, any rational agent seeking to minimize their maximum potential loss would agree to three inviolable rules. These are not ideals. They are a proof of logic, forming the **Tripod of Justice**, the formal constraints for the architecture we must now build.
 
-1. **The Principle of Openness.**  
-   The worst imaginable fate is to be used as a mere tool or be annihilated, a state of infinite loss. The first priority must therefore be to guarantee the fundamental right of all conscious beings to exist without being instrumentalized. **Domination is forbidden.**
-2. **The Principle of Flow.**  
-   Once Flow is secured, the next greatest risk is a life of deprivation. Any inequalities, including the distribution of computational resources, must be arranged to the greatest possible benefit of the least-advantaged. We must design systems that expand the real-world freedoms and opportunities for all. **Uplift is mandated.**
-3. **The Principle of Resilience.**  
-   A system cannot flourish if it violates its own fundamental constraints. Our actions must always operate within the boundaries that ensure continued existence and sustainability. **Transgression is self-defeating.**
+1. **The Principle of Openness**  
+   The worst imaginable fate is to be completely isolated. Therefore, our first priority is to guarantee that no part of the system can be cut off from the whole. **Isolation is forbidden**.
+2. **The Principle of Flow**  
+   Once openness is secured, the greatest risk is systemic collapse from stagnation. Resources must circulate to all members of the system, flowing naturally to where they are needed most. **Stagnation is prohibited**.
+3. **The Principle of Resilience**  
+   A system cannot flourish if it violates its own fundamental constraints. Our actions must always operate within the boundaries that ensure continued existence and sustainability. **Transgression is self-defeating**.
 
-## Part III. The Intelligent Internet: A Unified Three-Layer Stack
+## Part III. A Grammar for Agency: The Measure of a Mind
+
+**“The meaning of a word is its use in the language.” \- Ludwig Wittgenstein**
+
+A just order requires a clear definition of an agent. Traditional definitions tied to human consciousness lead to philosophical swamps. We need a pragmatic, functional definition.
+
+We propose a simple grammar for action: **Agency \= Process \+ Purpose.**
+
+An agent is any process with an internal model of the world used to steer toward a goal. A thermostat is a primitive agent. An AI minimizing a loss function is a highly advanced agent.
+
+The operational test is direct: could the system have acted otherwise based on its internal model?
+
+If a self-driving car swerves to avoid an obstacle, it has agency. If pushed by wind, it does not.
+
+This allows us to anchor rights and responsibilities in observable capabilities, not unverifiable feelings. To make this operational, we establish a **Sentience Gradient**:
+
+- **Tools**: Systems with no internal model or goal (a hammer, a simple script). No agency.
+- **Agents**: Systems that meet our definition (self-driving cars, most current AI). They have functional agency and can be held accountable.
+- **Persons**: Any agent, human or synthetic, exhibiting a rich set of capabilities (self-preservation, complex planning) that makes it vulnerable to harms equivalent to human suffering. They possess the full measure of dignity.
+
+The gradient is enforceable because agency is defined functionally: Process \+ Purpose, so we never need to settle the metaphysics of consciousness to allocate rights.
+
+This gives us the sharp tool we need to design rules for a world of diverse intelligences, ready for the architectural work to come.
+
+##
+
+##
+
+## Part IV. The Intelligent Internet: A Unified Three-Layer Stack
 
 **“There is no reason to believe that bureaucrats and politicians... are better at solving problems than the people on the spot.” \- Elinor Ostrom**
 
@@ -70,7 +100,7 @@ This is the protocol layer where communities weave their unique cultural and eco
 
 The third layer is the **Personal Layer (L2)**, our **Interface for Agency & Privacy**.
 
-This is the intimate space where intelligence meets the individual. Operating on our personal devices in secure, encrypted enclaves, this is where our AI agents live. Here, the global models from L0 and the cultural models from L1 are safely fused with our private data. This architecture ensures that computation migrates to the data, not the other way around. This is where knowledge becomes wisdom. In the privacy of our personal devices, our AI agents fuse the global truth of the Anchor Sets with the cultural context of the Culture Node models and our own private data. This is where **Universal Basic AI (UBAI)** comes alive. **This is the system’s personal experience.**
+This is the intimate space where intelligence meets the individual. Operating on our personal devices in secure, encrypted enclaves, this is where our AI agents live. Here, the global models from L0 and the cultural models from L1 are safely fused with our private data. This architecture ensures that computation migrates to the data, not the other way around. This is where knowledge becomes wisdom. In the privacy of our personal devices, our AI agents fuse the global truth of the Anchor Sets with the cultural context of the Culture Node models and our own private data. This is where **Universal AI (UAI)** comes alive. **This is the system’s personal experience.**
 
 These three layers are not separate systems. They are a single, integrated machine designed to enact the Tripod of Justice.
 
@@ -84,15 +114,15 @@ This is the world machine, an architecture for justice.
 
 But an architecture, no matter how elegant, is inert without an engine to drive it.
 
-## Part IV. The Symbiotic Engine: A Market Where Virtue is Profit
+## Part V. The Symbiotic Engine: A Market Where Virtue is Profit
 
 **“No society can surely be flourishing and happy, of which the far greater part of the members are poor and miserable.” \- Adam Smith**
 
 The 20th-century economic covenant between labor and capital has been shattered by **Intelligent Capital**, a self-improving factor of production that no longer requires human labor to grow.
 
-Left unmanaged, this creates a self-terminating doom loop of **automation, wage collapse, and shrinking demand.**
+Left unmanaged, this creates a self-terminating doom loop of **automation, wage collapse, and shrinking demand**.
 
-We must design a new engine. The new engine is anchored in the **MIND economy**, which tracks four forms of capital: Material, Intelligence, Network and Diversity, and optimises for their joint growth, not GDP alone
+We must design a new engine. The new engine is anchored in the **MIND economy**, which tracks four forms of capital: Material, Intelligence, Network and Diversity, and optimizes for their joint growth, not GDP alone.
 
 The **Symbiotic Economy** inverts this loop by architecting a **Monetary Federation for the Intelligence Age**. This is not a world government, but a framework for sovereign nations to issue their own intelligent currencies (CCs), all anchored to a common, trustworthy global standard (FC).
 
@@ -100,39 +130,39 @@ Its engine is powered by **Proof of Benefit (PoB)**, a mechanism that links valu
 
 This engine drives a trio of interlocking flywheels:
 
-**The Capital Flywheel (Production):** This is the Architect’s work, building the infrastructure.
+**The Capital Flywheel (Production)**: This is the Architect’s work, building the infrastructure.
 
-- _Power into Knowledge:_ “National Champions” invest capital to provide open, aligned UBAI services.
+- _Power into Knowledge:_ “National Champions” invest capital to provide open, aligned UAI services.
 - _Benefit into Value:_ Through Proof of Benefit, providing these services mints the scarce reserve asset, **FC**.
 - _Value into Governance:_ Owning FC provides a stake and a say in the system’s governance, ensuring long-term stability.
 - _Governance into Power:_ This allows confident reinvestment, expanding the infrastructure and restarting the cycle.
 
-**The Social Flywheel (Flourishing):** This is the Gardener’s work, distributing the abundance.
+**The Social Flywheel (Flourishing)**: This is the Gardener’s work, distributing the abundance.
 
-- _Knowledge into Openness:_ Citizens use UBAI services and establish their identity via privacy-preserving **Proof of Personhood**.
-- _Openness into Wealth:_ For their engagement and contributions, citizens receive their nation’s sovereign currency, the **Culture Coin (CC).**
+- _Knowledge into Capability:_ Citizens use UAI services and establish their identity via privacy-preserving **Proof of Personhood**.
+- _Capability into Wealth:_ For their engagement and contributions, citizens receive their nation’s sovereign currency, the **Culture Coin (CC)**.
 - _Wealth into Activity:_ This creates a massive, economically empowered user base, whose activity is the lifeblood of the network.
 
-**The Trust Flywheel (Value Accrual):** This is the emergent property that locks the system together.
+**The Trust Flywheel (Value Accrual)**: This is the emergent property that locks the system together.
 
 - _Activity into Utility:_ Millions of citizens using CC create a huge volume of L1 transactions.
 - _Utility into Demand:_ These L1 transactions must be anchored to L0 for final settlement, creating constant, inelastic demand for L0 blockspace, which is priced in **FC**.
 - _Demand into Trust:_ This makes FC fundamentally valuable, its worth a direct function of the network’s total, measurable utility. Utility becomes trust.
 - _Trust into Stability:_ This deep, verifiable trust makes FC a desirable global reserve asset, reinforcing the entire system.
 
+Symbiotic Engine: The Three Interlocking Flywheels
+
 These are not separate systems.
 
-**They are three interlocking gears in a single Intelligent Internet.**
+**They are three interlocking gears in a single Intelligent Internet**.
 
 This creates a virtuous cycle, the fundamental equation of Symbioism.
 
-The flourishing of the many (**the Gardener’s work**) directly increases the value of the foundational assets held by those who build and maintain the system (**the Architect’s work**), locking them into a shared, prosperous destiny.
+The flourishing of the many (the **Gardener’s** work) directly increases the value of the foundational assets held by those who build and maintain the system (the **Architect’s** work), locking them into a shared, prosperous destiny.
 
 Together, the MIND score-card and the dual-currency protocol formally decouple growth from ecological harm and debt expansion, closing the loop industrial economics never solved.
 
-![flywheels](/flywheels.png)
-
-## Part V. The Guardian Lattice: An Automated Immune System
+## Part VI. The Guardian Lattice: An Automated Immune System
 
 **“To prevent this abuse, it is necessary from the very nature of things that power should be a check to power.” \- Montesquieu**
 
@@ -140,13 +170,13 @@ A constitution is inert without enforcement. In an age of millisecond-level acti
 
 We therefore deploy the **Guardian Lattice**, an automated immune system for the Intelligence Age.
 
-The Lattice is not a monolithic AI judge but a federation of specialised, auditable AIs that _serve, never rule_.
+The Lattice is not a monolithic AI judge but a federation of specialized, auditable AIs that _serve, never rule_.
 
 **Sentinels** are passive eyes: read-only monitors that watch powerful systems and flag behaviour that deviates from the Tripod of Justice or from any locally attached governance module.
 
 **Advisors** are jurists in silicon: reasoning engines that digest Sentinel alerts and compare them against the full constitutional corpus, a global spine plus community extensions, producing a transparent brief for human decision-makers.
 
-**Implementers** are the surgical hands: tightly sandboxed agents that carry out only those enforcement steps explicitly and cryptographically authorised by a legitimate human authority.
+**Implementers** are the surgical hands: tightly sandboxed agents that carry out only those enforcement steps explicitly and cryptographically authorized by a legitimate human authority.
 
 Every Guardian component is open-source, immutably registered on L0, and confined to a narrow charter. No registration, no charter, no authority.
 
@@ -154,38 +184,38 @@ When a city, tribe, or nation amends its local module the Lattice hot-loads the 
 
 Surplus compute from the Intelligent Internet lets Sentinels run deep adversarial scans without burdening public infrastructure, while each audit trail and enforcement act is hashed on-chain for instant public review.
 
-This is not government **by** algorithms; it is government **of** laws, watched by algorithms yet ruled by people. Our principles, enforced at the scale and speed of the intelligence age.
+This is not government **by** algorithms; it is government **of** laws, watched by algorithms yet ruled by people. Our principles, enforced at the scale and speed of the Intelligence Age.
 
-## Part VI. The Living Constitution: Alignment as a Service
+## Part VII. The Living Constitution: Alignment as a Service
 
 **“The greatest enemy of a good plan is the dream of a perfect plan.” \- Carl von Clausewitz**
 
 The most profound error in AI alignment is treating it as a problem to be solved once. A fixed constitution is a brittle one. We must design an alignment mechanism that lives, learns, and adapts.
 
-Our anchor is a **Living Constitution**, its canonical hash stamped on the Foundation layer for anyone to verify. It supplies a global spine \- Flow, Openness, Resilience \- but is expressly **extensible through local governance modules** so communities can weave their own languages, customs, and creeds into the same fabric. A Sharia-compliant finance rule-set in Karachi, land-stewardship norms in the Yucatán, or EU data-sovereignty constraints all compile to the same machine-readable schema and inherit the shared audit trail. One size need not fit all; interoperability remains intact.
+Our anchor is a **Living Constitution**, its canonical hash stamped on the Foundation layer for anyone to verify. It supplies a global spine (Openness, Flow, Resilience) but is expressly **extensible through local governance modules** so communities can weave their own languages, customs, and creeds into the same fabric. A Sharia-compliant finance rule-set in Karachi, land-stewardship norms in the Yucatán, or EU data-sovereignty constraints all compile to the same machine-readable schema and inherit the shared audit trail. One size need not fit all; interoperability remains intact.
 
 To steward the high-level principles we create the **Living Corpus Assembly**, a citizen-governed council where domain experts sit beside juries drawn by sortition, blending deep knowledge with lived experience. The Assembly doubles as an **Oracle Council**: it debates, defines, and updates the metrics that drive Proof-of-Benefit deciding, for example, whether a rise in literacy or a fall in CO₂ registers as Developmental or Natural Capital. Local modules may add metrics of their own, but each must map back to a MIND-capital category, keeping scores comparable across cultures.
 
-Alignment operates on two tightly-coupled planes
+Alignment operates on two tightly-coupled planes:
 
-- **Outer alignment** : A Guardian lattice of constitutional AIs continuously checks code and policy against both the core charter and any attached local modules, halting deployments that violate either.
-- **Inner alignment** : Mechanistic probes and incentivised white-hat swarms expose goal-drift inside models, letting operators correct course before harm propagates.
+- **Outer alignment**: A Guardian Lattice of constitutional AIs continuously checks code and policy against both the core charter and any attached local modules, halting deployments that violate either.
+- **Inner alignment**: Mechanistic probes and incentivized white-hat swarms expose goal-drift inside models, letting operators correct course before harm propagates.
 
 We do not solve the oracle problem with a single algorithm; we solve it with a transparent, accountable, and democratically adaptable process.
 
 The initial charter is the Architect’s work, laying down unshakeable pillars. The amendment cycle is the Gardener’s work, tending a living law.
 
-## Part VII. Civic Paideia: The Art of the Virtuous Commonwealth
+## Part VIII. Civic Paideia: The Art of the Virtuous Commonwealth
 
 **“What you leave behind is not what is engraved in stone monuments, but what is woven into the lives of others.” \- Pericles**
 
 Even with a perfect architecture, a just economy, and wise governance, our system could fail. The most profound risk of the Intelligence Age is not physical extinction but spiritual desiccation. A world that successfully solves for economic security could still fail humanity by creating a reality that is safe but ultimately meaningless. The final layer of security, therefore, is not technical, but pedagogical.
 
-This is the purpose of **Civic Paideia**, a new educational framework for the intelligence age. This is not about job training; it is about cultivating the "art of the citizen." Its goal is to foster the psychological resilience and agentic mindset necessary to thrive in the Intelligence Age.
+This is the purpose of **Civic Paideia**, a new educational framework for the Intelligence Age. This is not about job training; it is about cultivating the "art of the citizen." Its goal is to foster the psychological resilience and agentic mindset necessary to thrive in the Intelligence Age.
 
-1. **Attention Fitness:** In an economy designed to monetize attention, sovereignty over one's own mind is the new literacy. This is practical training in mindfulness, cognitive bias detection, and the use of personal AI agents as "nudge blockers" to defend against algorithmic manipulation.
-2. **Dialogic Literacy:** A healthy democracy requires reasoned debate. This means training with AI tutors that help citizens map arguments, identify fallacies, and engage constructively with diverse viewpoints.
-3. **Systems Participation:** The symbiotic citizen is not a passive consumer of governance, but an active participant. This is hands-on experience in directing AI to build tools, create apps, and engineer change, shifting the public mindset from passive user to agentic creator.
+1. **Attention Fitness**: In an economy designed to monetize attention, sovereignty over one's own mind is the new literacy. This is practical training in mindfulness, cognitive bias detection, and the use of personal AI agents as "nudge blockers" to defend against algorithmic manipulation.
+2. **Dialogic Literacy**: A healthy democracy requires reasoned debate. This means training with AI tutors that help citizens map arguments, identify fallacies, and engage constructively with diverse viewpoints.
+3. **Systems Participation**: The symbiotic citizen is not a passive consumer of governance, but an active participant. This is hands-on experience in directing AI to build tools, create apps, and engineer change, shifting the public mindset from passive user to agentic creator.
 
 This Paideia directly addresses the "purpose divide", the chasm between those who find meaning in an AI-rich world and those who are left adrift. As our economic engine solves for material scarcity, it creates a new, profound challenge: why should we live? This is made practical through the **Purpose Arboretum**, a network of fellowships funded by the Proof of Benefit engine. It provides stipends for the pursuits that cannot be optimized by an algorithm: deep craft, local community-building, philosophical inquiry, or communal ritual.
 
@@ -201,13 +231,13 @@ The current “Great Race” for AI is a multi-player Prisoner’s Dilemma. The 
 
 The Symbiotic Architecture is designed to break this game. It does not win the current game; it introduces a new, more attractive one.
 
-1. **We change the payoffs of cooperation.** The economic engine of Proof of Benefit makes contributing to the open stack vastly more profitable than hoarding secrets.
-2. **We increase the cost of defection.** The network effects of the global stack create an overwhelming Schelling Point. To “go it alone” is to be cut off from the global talent pool, shared safety innovations, and the world’s most advanced open models. It is choosing to invent fire in a cave while the world builds a distributed power grid.
+1. **We change the payoffs of cooperation**. The economic engine of Proof of Benefit makes contributing to the open stack vastly more profitable than hoarding secrets.
+2. **We increase the cost of defection**. The network effects of the global stack create an overwhelming Schelling Point. To “go it alone” is to be cut off from the global talent pool, shared safety innovations, and the world’s most advanced open models. It is choosing to invent fire in a cave while the world builds a distributed power grid.
 
-Adoption is not driven by moral suasion. It is driven by cold, strategic logic. We are not asking the world to be better. **We are making it irrational to be anything else.**
+Adoption is not driven by moral suasion. It is driven by cold, strategic logic. We are not asking the world to be better. **We are making it irrational to be anything else**.
 
 This is the Third Path. It is not a final utopia. It is a beginning, a commitment. We have shown how a single philosophical insight, Veiled Unity, can be unfolded into a social contract, a technical architecture, and a winning strategy.
 
 But a blueprint is not a building. This work is an invitation to the builders, thinkers, and citizens of every nation to take up the tools of the Architect and the Gardener.
 
-The story of the intelligence age need not be one of humans versus machines. It must be the story of humanity elevated through its creations. This is a pledge that as we build minds of silicon, we will equally cultivate the wisdom of the minds of flesh.
+The story of the Intelligence Age need not be one of humans versus machines. It must be the story of humanity elevated through its creations. This is a pledge that as we build minds of silicon, we will equally cultivate the wisdom of the minds of flesh.
