--- a/src/content/index.mdx
+++ b/src/content/index.mdx
@@ -124,6 +124,8 @@ This engine drives a trio of interlocking flywheels:
 
 Symbiotic Engine: The Three Interlocking Flywheels
 
+![Symbiotic Engine](/Flywheels_darkbg.png)
+
 These are not separate systems.
 
 **They are three interlocking gears in a single Intelligent Internet**.
