--- a/src/content/the-last-economy/introduction.mdx
+++ b/src/content/the-last-economy/introduction.mdx
@@ -1,5 +1,7 @@
 # Introduction: The Thousand-Day Window
 
+![The Last Economy](/the-last-economy/introduction/demo.png)
+
 Your economic life expectancy is shrinking. Not your career. Not your current job. Your entire economic relevance as a human being. We are living through a historical epoch of unprecedented change, a finite window of time during which the fundamental rules of our civilization are being rewritten. This is not speculation. This is a phase transition.
 
 When I write these words, I do so with the peculiar burden of someone who has seen both worlds. For years, I was a macro hedge fund manager. My job was to find the cracks in the global financial system and bet on them before they shattered. I learned to see the world not as economists described it, but as a fragile, interconnected network governed by fear, greed, and the brutal physics of capital flows.
