feat: add 21 new chapters and images to The Last Economy book content

--- a/src/content/the-last-economy/chapter-1.mdx
+++ b/src/content/the-last-economy/chapter-1.mdx
@@ -1,7 +1,7 @@
-# Chapter 1: The Intelligence inversion
+# Chapter 1: The Intelligence Inversion
 
-_"A new scientific truth does not triumph by convincing its opponents and making them see the light, but rather because its opponents eventually die, and a new generation grows up that is familiar with it."_  
-—Max Planck
+> "A new scientific truth does not triumph by convincing its opponents and making them see the light, but rather because its opponents eventually die, and a new generation grows up that is familiar with it."
+> — Max Planck
 
 ## The Pattern That Breaks the World
 
@@ -37,7 +37,7 @@ The transition from Labor to Capital was traumatic but comprehensible. You could
 
 Consider this: In 1998, Kodak employed 170,000 people and was worth thirty-one billion dollars. In 2012, Facebook bought Instagram for one billion dollars. Instagram had thirteen employees. No factories. No inventory. No physical products. Just the ability to organize human attention at scale.
 
-The entire photography industry evaporated in less than a decade. Not because people stopped taking pictures, but because they started taking infinite pictures. The scarcity that gave photos value vanished. WhatsApp sold for nineteen billion dollars with fifty-five employees, obliterating the global SMS industry and its hundreds of thousands of workers. Value had transformed into something new: not a thing to be sold, not a process to be repeated, but the invisible _structure of the network itself._
+The entire photography industry evaporated in less than a decade. Not because people stopped taking pictures, but because they started taking infinite pictures. The scarcity that gave photos value vanished. WhatsApp sold for nineteen billion dollars with fifty-five employees, obliterating the global SMS industry and its hundreds of thousands of workers. Value had transformed into something new: not a thing to be sold, not a process to be repeated, but the invisible **structure of the network itself.**
 
 ## The Fourth Inversion: The Intelligence Event
 
@@ -45,13 +45,17 @@ Now we arrive at the present. The final inversion. The one from which there is n
 
 On November 30, 2022, everything changed. OpenAI released ChatGPT to the public. Within five days, a million users. Within two months, a hundred million. The fastest adoption of any technology in human history. But the speed is not what matters. What matters is what it means. For all of human history, intelligence was a form of labor, scarce and locked inside human skulls. Now, for the first time, intelligence has become a form of capital. It can be copied infinitely. It improves recursively.
 
-Let me make this concrete. In February 2023, hiring a competent writer cost $50/hour. By March 2023, GPT-4 could write better than most humans for $0.002/hour. That is not a productivity improvement. That is a 99.996% overnight collapse in the price of human intelligence. When the fundamental input of the knowledge economy becomes effectively free, economics as we know it doesn't just change—it ceases to apply.
+Let me make this concrete. In early 2023, a typical U.S. writer earned about $35 an hour. In March 2023, API access to large models let you generate a 750-word draft for about six cents of 'GPT-4' output, plus a small prompt.
 
-But the most profound change is not just that AI replaces the mind. It is that it introduces a new form of labor into the world with a completely different physical basis. This is the Metabolic Rift.
+'gpt-3.5-turbo' was $0.002 per 1,000 tokens, which pushed the price of short drafts down to fractions of a cent. That is not a productivity improvement. It is a new price regime for cognition. When the marginal cost of high-quality text approaches zero, the economics built for scarcity start to buckle.
+
+But the most profound change is not just that AI replaces the mind. It is that it introduces a new form of labor into the world with a completely different physical basis. This is the **Metabolic Rift**.
 
 For ten thousand years, all labor was performed by metabolic engines called human beings. We require sustenance, shelter, rest, and a complex social structure to function. Our economic value was inextricably tied to our biology. AI and robotics are non-metabolic labor. They require only electricity. They have no biology to support.
 
 This is why this fourth inversion is final. When hands became obsolete, we pivoted to our minds. But when our minds are out-competed by a form of labor that does not need to eat, sleep, or live, there is nowhere left to pivot. We are not just facing a more efficient competitor; we are facing a different category of economic life.
+
+![Inversion](/the-last-economy/chapter-1/inversion-dark.png)
 
 ## The Mathematics of Obsolescence
 
@@ -71,7 +75,7 @@ The standard answer is "creatives and caretakers." But last month, an AI-generat
 
 The honest answer is that we do not know. For the first time in economic history, we face an inversion with no obvious landing place. We are the generation that will live through the discontinuity. The last humans to remember when human thought had economic value. The first to discover what comes after.
 
-## The Peculiar Poetry of Our Position
+### The Peculiar Poetry of Our Position
 
 We stand at a unique moment in history. We can see both shores: the old world we are leaving and the new world being born. We are the last generation that will remember scarcity as the fundamental economic fact. The last to equate work with worth. The last to believe that intelligence is inherently human.
 
