--- a/src/content/the-last-economy/introduction.mdx
+++ b/src/content/the-last-economy/introduction.mdx
@@ -1,7 +1,5 @@
 # Introduction: The Thousand-Day Window
 
-![The Last Economy](/the-last-economy/introduction/demo.png)
-
 Your economic life expectancy is shrinking. Not your career. Not your current job. Your entire economic relevance as a human being. We are living through a historical epoch of unprecedented change, a finite window of time during which the fundamental rules of our civilization are being rewritten. This is not speculation. This is a phase transition.
 
 When I write these words, I do so with the peculiar burden of someone who has seen both worlds. For years, I was a macro hedge fund manager. My job was to find the cracks in the global financial system and bet on them before they shattered. I learned to see the world not as economists described it, but as a fragile, interconnected network governed by fear, greed, and the brutal physics of capital flows.
@@ -10,7 +8,7 @@ Then I left that world to help build the engine of the next one. As the founder 
 
 Now, I see the system I once exploited from the perspective of the force that will shatter it completely. This book is born from that unique, terrifying vantage point. It is both a diagnosis from an insider and a blueprint from an architect.
 
-But here is what haunts me: we are achieving the greatest triumph in human history, the liberation of intelligence from the constraints of biology, and our economic system can only process it as catastrophe. This is not a theoretical problem. Here's the cosmic joke that would be hilarious if it weren't so tragic. I call it the Abundance Trap: We are about to achieve post-scarcity in the realm of intelligence, and our scarcity-based economic system is going to process this abundance as poverty. Consider the two dashboards by which we measure our world.
+But here is what haunts me: we are achieving the greatest triumph in human history, the liberation of intelligence from the constraints of biology, and our economic system can only process it as catastrophe. This is not a theoretical problem. Here's the cosmic joke that would be hilarious if it weren't so tragic. I call it the **Abundance Trap:** We are about to achieve post-scarcity in the realm of intelligence, and our scarcity-based economic system is going to process this abundance as poverty. Consider the two dashboards by which we measure our world.
 
 The first is the official dashboard of the old economy. The stock market is at an all time high. GDP growth is steady. Unemployment is historically low. By every metric our leaders watch, we have never been more prosperous.
 
@@ -20,7 +18,7 @@ This disconnect is the first siren of a collapsing paradigm. We have built a civ
 
 ## The Last Time This Happened
 
-Economics began as a Greek word “, oikonomía”, meaning "household management." For three centuries, we managed our household like a factory. We made efficiency our god and wondered why we felt empty. We optimized for growth and wondered why we felt stuck.
+Economics began as a Greek word “oikonomía” meaning "household management." For three centuries, we managed our household like a factory. We made efficiency our god and wondered why we felt empty. We optimized for growth and wondered why we felt stuck.
 
 History doesn't repeat, but it does rhyme. And right now it's pounding out the same fatal beat that has marked every economic extinction event.
 
@@ -48,19 +46,15 @@ This is not a technical manual for AI. You don't need to understand transformers
 
 This book is an engineering manual for building Future Three. It's a blueprint drawn from first principles, because the old principles are dead. It introduces a new science for a new world: **Intelligence Theory**, a physics of how information is processed to create value and persistence. **Intelligent Economics** is its first application.
 
-First is the demolition, where we will shatter every assumption you have about economics. The second stage is the new physics, where from the rubble, we will derive the true laws that govern complex systems. The third stage is the architecture, showing how this new physics necessarily generates the structures of a healthy economy. The fourth stage provides the blueprint: concrete, engineering-based solutions for a symbiotic world. The fifth and final stage is the human transition, your personal and philosophical guide to the new age.Part I is the demolition. We will shatter every assumption you have about economics.  
-Part II is the new physics. From the rubble, we will derive the true laws that govern complex systems.  
-Part III is the architecture. We will see how this new physics necessarily generates the structures of a healthy economy.  
-Part IV is the blueprint. Concrete, engineering-based solutions for a symbiotic world.  
-Part V is the human transition. Your personal and philosophical guide to the new age.
+First is the demolition, where we will shatter every assumption you have about economics. The second stage is the new physics, where from the rubble, we will derive the true laws that govern complex systems. The third stage is the architecture, showing how this new physics necessarily generates the structures of a healthy economy. The fourth stage provides the blueprint: concrete, engineering-based solutions for a symbiotic world. The fifth and final stage is the human transition, your personal and philosophical guide to the new age.
 
 ## The Clock Is Real: The Thousand-Day Window
 
-Let me be precise about what this window means. It is not a prediction of a single apocalyptic event. It is an estimation of the historical epoch during which the **phase transition becomes irreversible.** It is the point where the water in the pot, having been heated for a long time, finally boils. Before that moment, you can still turn down the heat. After, the water will become steam, no matter what you do.
+Let me be precise about what this window means. It is not a prediction of a single apocalyptic event. It is an estimation of the historical epoch during which the phase transition becomes irreversible. It is the point where the water in the pot, having been heated for a long time, finally boils. Before that moment, you can still turn down the heat. After, the water will become steam, no matter what you do.
 
 Futurists have long predicted a technological Singularity, a moment when machine intelligence surpasses our own. They were right about the exponential curve. They were wrong about what would break first. We are headed for a **socio-economic Singularity** long before we reach a purely technological one. Our systems of money, work, and meaning will shatter under the strain of near infinite productivity.
 
-This is not a deadline for apocalypse. It is a deadline for **meaningful choice.** My professional estimate for this window, born from watching the exponential curves of AI capability, cost, and adoption, is roughly one thousand days. It could be 800\. It could be 1,200. What I am telling you is that it is not 10,000. The order of magnitude is real. The clock is real. And it is ticking.
+This is not a deadline for apocalypse. It is a deadline for meaningful choice. My professional estimate for this window, born from watching the exponential curves of AI capability, cost, and adoption, is roughly one thousand days. It could be 800\. It could be 1,200. What I am telling you is that it is not 10,000. The order of magnitude is real. The clock is real. And it is ticking.
 
 ## The Invitation
 
