feat: add audio player to all book chapters

--- a/src/content/the-last-economy/chapter-1.mdx
+++ b/src/content/the-last-economy/chapter-1.mdx
@@ -1,5 +1,12 @@
 # Chapter 1: The Intelligence Inversion
 
+<audio controls className="w-full mt-6">
+  <source
+    src="https://storage.googleapis.com/webstatics.ii.inc/Chapter-1-TLE.mp3"
+    type="audio/mp3"
+  />
+</audio>
+
 > "A new scientific truth does not triumph by convincing its opponents and making them see the light, but rather because its opponents eventually die, and a new generation grows up that is familiar with it."
 > — Max Planck
 
