--- a/src/content/the-last-economy/chapter-10.mdx
+++ b/src/content/the-last-economy/chapter-10.mdx
@@ -1,5 +1,12 @@
 # Chapter 10: The Network Prison
 
+<audio controls className="w-full mt-6">
+  <source
+    src="https://storage.googleapis.com/webstatics.ii.inc/Chapter-10-TLE.mp3"
+    type="audio/mp3"
+  />
+</audio>
+
 > "The rich have markets, the poor have bureaucrats."
 > —William Easterly
 
