--- a/src/content/the-last-economy/chapter-11.mdx
+++ b/src/content/the-last-economy/chapter-11.mdx
@@ -1,5 +1,12 @@
 # Chapter 11: The Cathedral and the Bazaar 2.0
 
+<audio controls className="w-full mt-6">
+  <source
+    src="https://storage.googleapis.com/webstatics.ii.inc/Chapter-11-TLE.mp3"
+    type="audio/mp3"
+  />
+</audio>
+
 > "The best way to have a good idea is to have a lot of ideas."
 > —Linus Pauling
 
