--- a/src/content/the-last-economy/chapter-12.mdx
+++ b/src/content/the-last-economy/chapter-12.mdx
@@ -1,5 +1,12 @@
 # Chapter 12: Intelligent Game Theory
 
+<audio controls className="w-full mt-6">
+  <source
+    src="https://storage.googleapis.com/webstatics.ii.inc/Chapter-12-TLE.mp3"
+    type="audio/mp3"
+  />
+</audio>
+
 > "The calculus of probabilities, in its application to game theory, is a monstrously complicated subject... It is not a topic for a gentleman."
 > —John von Neumann
 
