--- a/src/content/the-last-economy/chapter-13.mdx
+++ b/src/content/the-last-economy/chapter-13.mdx
@@ -1,5 +1,12 @@
 # Chapter 13: The Dual Engine: The Rhythms of Change
 
+<audio controls className="w-full mt-6">
+  <source
+    src="https://storage.googleapis.com/webstatics.ii.inc/Chapter-13-TLE.mp3"
+    type="audio/mp3"
+  />
+</audio>
+
 > "We are like sailors who must rebuild their ship on the open sea, never able to dismantle it in dry dock and to reconstruct it there out of the best materials."
 > —Otto Neurath
 
