--- a/src/content/the-last-economy/chapter-14.mdx
+++ b/src/content/the-last-economy/chapter-14.mdx
@@ -1,5 +1,12 @@
 # Chapter 14: The New Social Contract
 
+<audio controls className="w-full mt-6">
+  <source
+    src="https://storage.googleapis.com/webstatics.ii.inc/Chapter-14-TLE.mp3"
+    type="audio/mp3"
+  />
+</audio>
+
 > "Every generation needs a new revolution."
 > —Thomas Jefferson
 
