--- a/src/content/the-last-economy/chapter-15.mdx
+++ b/src/content/the-last-economy/chapter-15.mdx
@@ -1,6 +1,13 @@
 # Chapter 15: The Alignment Economy: Who Commands the Machines?
 
-> "The real problem is not whether machines think but whether men do."\*  
+<audio controls className="w-full mt-6">
+  <source
+    src="https://storage.googleapis.com/webstatics.ii.inc/Chapter-15-TLE.mp3"
+    type="audio/mp3"
+  />
+</audio>
+
+> "The real problem is not whether machines think but whether men do."
 > —B.F. Skinner
 
 ## The Emergence of the Second Economy
