--- a/src/content/the-last-economy/chapter-16.mdx
+++ b/src/content/the-last-economy/chapter-16.mdx
@@ -1,5 +1,12 @@
 # Chapter 16: The Three Futures
 
+<audio controls className="w-full mt-6">
+  <source
+    src="https://storage.googleapis.com/webstatics.ii.inc/Chapter-16-TLE.mp3"
+    type="audio/mp3"
+  />
+</audio>
+
 > "The future is already here, it is just not evenly distributed."
 > —William Gibson
 
