--- a/src/content/the-last-economy/chapter-17.mdx
+++ b/src/content/the-last-economy/chapter-17.mdx
@@ -1,5 +1,12 @@
 # Chapter 17: The Symbiotic State: Governance as Geometry Engineering
 
+<audio controls className="w-full mt-6">
+  <source
+    src="https://storage.googleapis.com/webstatics.ii.inc/Chapter-17-TLE.mp3"
+    type="audio/mp3"
+  />
+</audio>
+
 > "Ask not what your country can do for you, ask what your country can be for you."  
 > —A 21st Century Revision
 
