--- a/src/content/the-last-economy/chapter-19.mdx
+++ b/src/content/the-last-economy/chapter-19.mdx
@@ -1,5 +1,12 @@
 # Chapter 19: The Nucleation of the New: A Strategy for Hope
 
+<audio controls className="w-full mt-6">
+  <source
+    src="https://storage.googleapis.com/webstatics.ii.inc/Chapter-19-TLE.mp3"
+    type="audio/mp3"
+  />
+</audio>
+
 > "Never doubt that a small group of thoughtful, committed citizens can change the world; indeed, it's the only thing that ever has."
 > —Margaret Mead
 
