--- a/src/content/the-last-economy/chapter-2.mdx
+++ b/src/content/the-last-economy/chapter-2.mdx
@@ -1,5 +1,12 @@
 # Chapter 2: Harbingers of the Storm
 
+<audio controls className="w-full mt-6">
+  <source
+    src="https://storage.googleapis.com/webstatics.ii.inc/Chapter-2-TLE.mp3"
+    type="audio/mp3"
+  />
+</audio>
+
 > "It happens gradually, then suddenly."
 > — Ernest Hemingway, The Sun Also Rises
 
