--- a/src/content/the-last-economy/chapter-21.mdx
+++ b/src/content/the-last-economy/chapter-21.mdx
@@ -1,5 +1,12 @@
 # Chapter 21: After Economics
 
+<audio controls className="w-full mt-6">
+  <source
+    src="https://storage.googleapis.com/webstatics.ii.inc/Chapter-21-TLE.mp3"
+    type="audio/mp3"
+  />
+</audio>
+
 > "The soul becomes dyed with the color of its thoughts."
 > —Marcus Aurelius
 
