--- a/src/content/the-last-economy/chapter-7.mdx
+++ b/src/content/the-last-economy/chapter-7.mdx
@@ -1,5 +1,12 @@
 # Chapter 7: The Generative Engine
 
+<audio controls className="w-full mt-6">
+  <source
+    src="https://storage.googleapis.com/webstatics.ii.inc/Chapter-7-TLE.mp3"
+    type="audio/mp3"
+  />
+</audio>
+
 > "Nature uses only the longest threads to weave her patterns, so each small piece of her fabric reveals the organization of the entire tapestry."\*  
 > —Richard Feynman
 
