--- a/src/content/the-last-economy/chapter-8.mdx
+++ b/src/content/the-last-economy/chapter-8.mdx
@@ -1,5 +1,12 @@
 # Chapter 8: The MIND of a Civilization
 
+<audio controls className="w-full mt-6">
+  <source
+    src="https://storage.googleapis.com/webstatics.ii.inc/Chapter-8-TLE.mp3"
+    type="audio/mp3"
+  />
+</audio>
+
 > "Civilization is a movement and not a condition, a voyage and not a harbor."
 > —Arnold J. Toynbee
 
