--- a/src/content/the-last-economy/chapter-4.mdx
+++ b/src/content/the-last-economy/chapter-4.mdx
@@ -1,5 +1,12 @@
 # Chapter 4: The Dashboard for Insanity: GDP and the Meaning Crisis
 
+<audio controls className="w-full mt-6">
+  <source
+    src="https://storage.googleapis.com/webstatics.ii.inc/Chapter-4-TLE.mp3"
+    type="audio/mp3"
+  />
+</audio>
+
 > "Not everything that can be counted counts, and not everything that counts can be counted."
 > —William Bruce Cameron
 
