--- a/src/content/the-last-economy/chapter-6.mdx
+++ b/src/content/the-last-economy/chapter-6.mdx
@@ -1,5 +1,12 @@
 # Chapter 6: The Engine of Order: Intelligence Against Entropy
 
+<audio controls className="w-full mt-6">
+  <source
+    src="https://storage.googleapis.com/webstatics.ii.inc/Chapter-6-TLE.mp3"
+    type="audio/mp3"
+  />
+</audio>
+
 > "The whole of science is nothing more than a refinement of everyday thinking."
 > —Albert Einstein
 
