--- a/src/content/the-last-economy/chapter-9.mdx
+++ b/src/content/the-last-economy/chapter-9.mdx
@@ -1,5 +1,12 @@
 # Chapter 9: The Three Flows: The Blind Scholars and the Elephant
 
+<audio controls className="w-full mt-6">
+  <source
+    src="https://storage.googleapis.com/webstatics.ii.inc/Chapter-9-TLE.mp3"
+    type="audio/mp3"
+  />
+</audio>
+
 > "A new scientific truth does not triumph by convincing its opponents and making them see the light, but rather because its opponents eventually die, and a new generation grows up that is familiar with it."
 > — Max Planck
 
