style: simplify chapter titles by removing "Chapter" prefix and updating chapter 5 metadata

--- a/src/content/the-last-economy/chapter-13.mdx
+++ b/src/content/the-last-economy/chapter-13.mdx
@@ -1,4 +1,4 @@
-# Chapter 13: The Dual Engine: The Rhythms of Change
+# 13. The Dual Engine: The Rhythms of Change
 
 <audio controls className="w-full mt-6">
   <source
