--- a/src/content/the-last-economy/chapter-15.mdx
+++ b/src/content/the-last-economy/chapter-15.mdx
@@ -1,4 +1,4 @@
-# Chapter 15: The Alignment Economy: Who Commands the Machines?
+# 15. The Alignment Economy: Who Commands the Machines?
 
 <audio controls className="w-full mt-6">
   <source
