--- a/src/content/the-last-economy/chapter-17.mdx
+++ b/src/content/the-last-economy/chapter-17.mdx
@@ -1,4 +1,4 @@
-# Chapter 17: The Symbiotic State: Governance as Geometry Engineering
+# 17. The Symbiotic State: Governance as Geometry Engineering
 
 <audio controls className="w-full mt-6">
   <source
