--- a/src/content/the-last-economy/chapter-19.mdx
+++ b/src/content/the-last-economy/chapter-19.mdx
@@ -1,4 +1,4 @@
-# Chapter 19: The Nucleation of the New: A Strategy for Hope
+# 19. The Nucleation of the New: A Strategy for Hope
 
 <audio controls className="w-full mt-6">
   <source
