--- a/src/content/the-last-economy/chapter-3.mdx
+++ b/src/content/the-last-economy/chapter-3.mdx
@@ -1,4 +1,4 @@
-# Chapter 3: The Seven Fatal Lies of a Dying Paradigm
+# 3. The Seven Fatal Lies of a Dying Paradigm
 
 <audio controls className="w-full mt-6">
   <source
