--- a/src/content/the-last-economy/chapter-4.mdx
+++ b/src/content/the-last-economy/chapter-4.mdx
@@ -1,4 +1,4 @@
-# Chapter 4: The Dashboard for Insanity: GDP and the Meaning Crisis
+# 4. The Dashboard for Insanity: GDP and the Meaning Crisis
 
 <audio controls className="w-full mt-6">
   <source
