--- a/src/content/the-last-economy/chapter-6.mdx
+++ b/src/content/the-last-economy/chapter-6.mdx
@@ -1,4 +1,4 @@
-# Chapter 6: The Engine of Order: Intelligence Against Entropy
+# 6. The Engine of Order: Intelligence Against Entropy
 
 <audio controls className="w-full mt-6">
   <source
