--- a/src/content/the-last-economy/chapter-9.mdx
+++ b/src/content/the-last-economy/chapter-9.mdx
@@ -1,4 +1,4 @@
-# Chapter 9: The Three Flows: The Blind Scholars and the Elephant
+# 9. The Three Flows: The Blind Scholars and the Elephant
 
 <audio controls className="w-full mt-6">
   <source
