--- a/src/content/the-last-economy/chapter-11.mdx
+++ b/src/content/the-last-economy/chapter-11.mdx
@@ -1,4 +1,4 @@
-# Chapter 11: The Cathedral and the Bazaar 2.0
+# 11. The Cathedral and the Bazaar 2.0
 
 <audio controls className="w-full mt-6">
   <source
