docs: add elephant diagram and update justice tripod image in chapters 7 and 9

--- a/src/content/the-last-economy/chapter-9.mdx
+++ b/src/content/the-last-economy/chapter-9.mdx
@@ -14,6 +14,8 @@
 
 In ancient India, six blind scholars were brought before an elephant. The first, touching the trunk, declared, "An elephant is like a thick snake\!" The second, feeling a leg, insisted, "No, it is like a mighty tree\!" The third, grasping the tail, proclaimed, "You are both fools, it is clearly a rope\!" Each scholar gave a perfect, empirically verifiable description of the part they touched. Each was completely right about their piece, catastrophically wrong about the whole, and ready to die defending their partial truth.
 
+![Types of Flow](/the-last-economy/chapter-9/elephant-dark.png)
+
 This is the secret history of economic thought.
 
 For three centuries, brilliant minds have been grappling with different parts of the same beast in a dark room, mistaking anatomy for ideology. The story of economics begins with Adam Smith, the father of Capitalism, who felt the steady pulse of commerce in the 18th century and declared the elephant’s nature was competitive exchange. He was followed by his great critic, Karl Marx, the architect of Communism, who witnessed industrial exploitation and grasped the elephant's recursive spiral of accumulation, insisting it was a vortex of human misery. Finally, Friedrich Hayek, a champion of the Austrian School and a fierce opponent of state control, touched the deep, invisible structures of tradition and proclaimed the elephant was a benevolent, spontaneous order that must be left alone.
